--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,3 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    @apply text-slate-800;
+}
+
+@layer components {
+    .button {
+        @apply transition-colors duration-300 ease-in-out;
+    }
+    .button.button-text {
+        @apply text-primary border-none border-transparent hover:bg-primary-100 hover:border-primary-100 focus:bg-primary-200 focus:border-primary-200;
+    }
+    *:not(.button-group) > .button {
+        @apply rounded-full min-w-12;
+    }
+    .button-group .button {
+        @apply first:rounded-l-full first:border-r-0 last:rounded-r-full last:border-l-0;
+    }
+    .button-group-default .button,
+    .button-default {
+        @apply bg-primary-100 border-primary-100 text-primary-contrast-100 hover:bg-primary-200 hover:border-primary-200 focus:bg-primary-300 focus:border-primary-300 focus:shadow;
+    }
+    .button-group-primary .button,
+    .button-primary {
+        @apply bg-primary-700 border-primary-700 text-primary-contrast hover:bg-primary-600 hover:border-primary-600 focus:bg-primary-500 focus:border-primary-500 focus:shadow;
+    }
+    .button-group-outline .button,
+    .button-outline {
+        @apply border-slate-400 text-slate-800 hover:bg-slate-100 focus:bg-slate-200 focus:shadow;
+    }
+}
